# DM_SDK_C

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DM_SDK_C/: CMakeLists.txt  LWDMApi.cpp  LWDMApi.h  LWDMType.h  Version.rc  resource.h
Firmware_Update/: CMakeLists.txt
Firmware_Update/core/: SshExec.cpp  SshExec.h  UpdateToolTask.cpp
